bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:3: error: value ! is not a member of Boolean
  if (aSmile! && bSmile || aSmile && !bSmile){
            ^MonkeyTrouble:3: error: not found: value &&
  if (aSmile! && bSmile || aSmile && !bSmile){
              ^MonkeyTrouble:3: error: not found: value ||
  if (aSmile! && bSmile || aSmile && !bSmile){
                        ^MonkeyTrouble:3: error: not found: value &&
  if (aSmile! && bSmile || aSmile && !bSmile){
                                  ^